Add jpa and junit5 dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+# URL of your database
+spring.datasource.url= jdbc:postgresql://localhost:5432/gym_champion_exercises
 
+# Username to access your DB
+spring.datasource.username=mihuadmin
+
+# Password to access your DB
+spring.datasource.password=lokas777
+
+# Creates the DB when the app starts, drops everything when the app closes. Good for testing.
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# this is just a workaround for a Hibernate bug, see https://hibernate.atlassian.net/browse/HHH-12368
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+# as data.sql works only for embedded databases, this will help with postgres initialisation
+spring.datasource.initialization-mode=always
