--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>9.4-1206-jdbc42</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
